--- a/Bourse/Bourse.csproj
+++ b/Bourse/Bourse.csproj
@@ -31,4 +31,8 @@
     <PackageReference Include="YahooQuotesApi" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\IdentityServer\IdentityServer.csproj" />
+  </ItemGroup>
+
 </Project>
