--- a/.gitignore
+++ b/.gitignore
@@ -404,6 +404,19 @@ FodyWeavers.xsd
 /IdentityServer/Bourse.db
 /IdentityServer/Identity.db
 /Bourse/Data/AMEX
+/Bourse/Data/ASX
+/Bourse/Data/EUREX
+/Bourse/Data/FOREX
+/Bourse/Data/INDEX
+/Bourse/Data/LIFFE
+/Bourse/Data/LSE
+/Bourse/Data/MGEX
 /Bourse/Data/NASDAQ
+/Bourse/Data/NYBOT
 /Bourse/Data/NYSE
+/Bourse/Data/OTCBB
+/Bourse/Data/SGX
 /Bourse/Data/TSX
+/Bourse/Data/TSXV
+/Bourse/Data/USMF
+/Bourse/Data/WCE
