--- a/Bourse/Bourse.csproj
+++ b/Bourse/Bourse.csproj
@@ -30,12 +30,17 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.0" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <PackageReference Include="System.Text.Json" Version="9.0.0" />
+    <PackageReference Include="Tesseract" Version="5.2.0" />
     <PackageReference Include="YahooFinanceApi" Version="2.3.3" />
     <PackageReference Include="YahooQuotesApi" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\IdentityServer\IdentityServer.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="tessdata\" />
   </ItemGroup>
 
 </Project>
