--- a/.gitignore
+++ b/.gitignore
@@ -403,20 +403,20 @@ FodyWeavers.xsd
 /Bourse/Bourse.db-wal
 /IdentityServer/Bourse.db
 /IdentityServer/Identity.db
-/Bourse/Data/AMEX
-/Bourse/Data/ASX
-/Bourse/Data/EUREX
-/Bourse/Data/FOREX
-/Bourse/Data/INDEX
-/Bourse/Data/LIFFE
-/Bourse/Data/LSE
-/Bourse/Data/MGEX
-/Bourse/Data/NASDAQ
-/Bourse/Data/NYBOT
-/Bourse/Data/NYSE
-/Bourse/Data/OTCBB
-/Bourse/Data/SGX
-/Bourse/Data/TSX
-/Bourse/Data/TSXV
-/Bourse/Data/USMF
-/Bourse/Data/WCE
+/Bourse/Data/AMEX/
+/Bourse/Data/ASX/
+/Bourse/Data/EUREX/
+/Bourse/Data/FOREX/
+/Bourse/Data/INDEX/
+/Bourse/Data/LIFFE/
+/Bourse/Data/LSE/
+/Bourse/Data/MGEX/
+/Bourse/Data/NASDAQ/
+/Bourse/Data/NYBOT/
+/Bourse/Data/NYSE/
+/Bourse/Data/OTCBB/
+/Bourse/Data/SGX/
+/Bourse/Data/TSX/
+/Bourse/Data/TSXV/
+/Bourse/Data/USMF/
+/Bourse/Data/WCE/
